--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,8 @@ name = "pypi"
 [packages]
 "discord.py" = "<2.0.0,>=1.6.0"
 PyYAML = "<6.0.0,>=5.4.1"
+fuzzywuzzy = "*"
+python-levenshtein = "*"
 
 [dev-packages]
 
